resources/assets/scss/pages/auth.scss
@use '@environment' as *;

.auth-wrapper {
    display: grid;
    height: 100vh;
    grid-template-columns: 1fr 1fr;

    .image-wrapper,
    .content-wrapper {
        display: flex;
        flex-direction: column;
        align-items: center;
        box-sizing: border-box;
    }

    .content-wrapper {
        align-items: center;
        justify-content: space-between;
        padding: 40px 0 20px 0;
    }

    .content {
        max-width: 80%;
        gap: 10px;
    }

    .content-info {
        text-align: center;
    }

    @media (max-width: 768px) {
        grid-template-columns: 1fr;

        .image-wrapper {
            display: none;
        }
    }
}

